package rina.messages;
option java_package="rina.encoding.impl.googleprotobuf.qosspecification";

message qosParameter_t { 	//information to identify an extra QoS parameter
	required string parameterName = 1; 			//the name of the QoS parameter
	required string parameterValue = 2; 		//the value of the QoS parameter
}

message qosSpecification_t{									//The QoS parameters requested by an application for a certain flow
	optional uint64 averageBandwidth = 2;			//in bytes/s, a value of 0 indicates 'don't care'
	optional uint64 averageSDUBandwidth = 3;		//in bytes/s, a value of 0 indicates 'don't care'
	optional uint32 peakBandwidthDuration = 4;		//in ms, a value of 0 indicates 'don't care'
	optional uint32 peakSDUBandwidthDuration = 5;	//in ms, a value of 0 indicates 'don't care'
	optional double undetectedBitErrorRate = 6;		//a value of 0 indicates 'don`t care'
	optional bool partialDelivery = 7;				//indicates if partial delivery of SDUs is allowed or not
	optional bool order = 8;						//indicates if SDUs have to be delivered in order
	optional int32 maxAllowableGapSdu = 9;			//indicates the maximum gap allowed in SDUs, a gap of N SDUs is considered the same as all SDUs delivered. A value of -1 indicates 'Any'
	optional uint32 delay = 10; 					//in milliseconds, indicates the maximum delay allowed in this flow. A value of 0 indicates don't care
	optional uint32 jitter = 11;					//in milliseconds, indicates indicates the maximum jitter allowed in this flow. A value of 0 indicates don't care
	repeated qosParameter_t extraParameters = 12; 		//the extra parameters specified by the application process that requested this flow
}